--- a/tasks/config_samba.yml
+++ b/tasks/config_samba.yml
@@ -17,15 +17,35 @@
     - restart ctdb
   when: ansible_distribution == "RedHat"
 
-- name: config_samba | configuring samba
+- name: config_samba | checking if /etc/samba/smb.conf is a symlink
+  stat:
+    path: "/etc/samba/smb.conf"
+  register: smb_symlink
+
+- name: config_samba | removing /etc/samba/smb.conf if a symlink
+  file:
+    path: "/etc/samba/smb.conf"
+    state: absent
+  when: smb_symlink.stat.islnk
+
+- name: config_samba | configuring samba {{ ctdb_samba_config }}
   template:
     src: "etc/samba/smb.conf.j2"
     dest: "/etc/samba/smb.conf"
     owner: root
     group: root
     mode: 0644
+    backup: "{{ ctdb_backup_configs }}"
   notify:
     - restart ctdb
+    
+#- name: config_samba | creating samba link /etc/samba/smb.conf -> {{ ctdb_samba_config }}
+#  file:
+#    src: "{{ ctdb_samba_config }}"
+#    dest: "/etc/samba/smb.conf"
+#    owner: root
+#    group: root
+#    state: link
 
 - name: config_samba | configuring nssswitch
   template:
@@ -34,22 +54,6 @@
     owner: root
     group: root
     mode: 0644
-  notify:
-    - restart ctdb
-
-- name: config_samba | disabling winbind service  #ctdb will manage
-  service:
-    name: "winbind"
-    enabled: no
-    state: stopped
-  when: ctdb_manages_winbind
-
-- name: config_samba | configuring KRB5
-  template:
-    src: "etc/krb5.conf.j2"
-    dest: "/etc/krb5.conf"
-    owner: root
-    group: root
-    mode: 0644
+    backup: "{{ ctdb_backup_configs }}"
   notify:
     - restart ctdb
