--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -15,8 +15,8 @@
     name: "{{ item }}"
     state: present
   with_items:
-    - 'krb5-config'
-    - 'krb5-locales'
+#    - 'krb5-config'
+#    - 'krb5-locales'
     - 'krb5-user'
     - 'libnss-winbind'
     - 'libpam-winbind'
