--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,8 +11,6 @@ ctdb_lockfile: '{{ ctdb_lock_directory }}/lockfile'
 ctdb_manages_nfs: false
 ctdb_manages_samba: true
 ctdb_manages_winbind: false  #enable if using Samba in AD or LDAP
-#ctdb_cluster_start_address: 50
-#ctdb_cluster_subnet: 192.168.202
 ctdb_nodes_cluster_address_int: 'eth1'  #ensure the address associated with this interface is already configured (eth0|eth1|eth2|enp0s3|enp0s8|etc...)
 ctdb_nodes_file: '/etc/ctdb/nodes'
 ctdb_nodes_group: 'ctdb-servers'
@@ -27,11 +25,8 @@ ctdb_public_addresses_file: '/etc/ctdb/public_addresses'
 ctdb_public_network: 192.168.202.0/24
 ctdb_samba_active_directory_info:
   domain_join_user: 'ansible'
-  domain_join_password: 'P@55w0rd'
-  idmap_gid: '10000-20000'
+  domain_join_password: 'domainpassword'
   idmap_range: '10000-99999'
-  idmap_uid: '10000-20000'
-#  idmap_range: '1000-90000'  #New way...
   kdc:
     - 'dc01.{{ pri_domain_name }}'
     - 'dc02.{{ pri_domain_name }}'
@@ -42,7 +37,7 @@ ctdb_samba_active_directory_info:
   winbind_enum_users: 'yes'  #if set to no then getent passwd will not output domain users
   winbind_enum_groups: 'yes'  #if set to no then getent group will not output domain groups
   winbind_cache_time: 900
-  workgroup: 'EVERYTHING'
+  workgroup: 'EXAMPLE'
 ctdb_samba_config: '{{ ctdb_glusterfs_mount }}/etc/samba/smb.conf'  #defines shared smb.conf between nodes...stored on GlusterFS mounts
 ctdb_samba_ctdbd_socket_file: '/var/lib/run/ctdb/ctdbd.socket'
 ctdb_samba_global_options:
@@ -89,4 +84,4 @@ ctdb_samba_shares_root_perms:
   group: 'root'
   directory_perms: 'u=rwx,g=rx,o=rx'
 ctdb_ulimit: 10000
-pri_domain_name: 'everythingshouldbevirtual.local'
+pri_domain_name: 'example.org'
