--- a/tasks/config_ctdb.yml
+++ b/tasks/config_ctdb.yml
@@ -1,13 +1,13 @@
 ---
-- name: config_ctdb | creating directories to share configs between nodes
-  file:
-    path: "{{ item }}"
-    state: directory
-    owner: root
-    group: root
-    mode: 0644
-  with_items:
-    - '{{ ctdb_glusterfs_mount }}/etc/samba'
+#- name: config_ctdb | creating directories to share configs between nodes
+#  file:
+#    path: "{{ item }}"
+#    state: directory
+#    owner: root
+#    group: root
+#    mode: 0644
+#  with_items:
+#    - '{{ ctdb_glusterfs_mount }}/etc/samba'
 
 - name: config_ctdb | ensuring {{ ctdb_lock_directory }} exists
   file:
