--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,8 @@
 ---
 # handlers file for ansible-ctdb
+- name: reload samba
+  command: "smbcontrol all reload-config"
+  
 - name: restart ctdb
   service:
     name: "ctdb"
