--- a/tasks/config_samba.yml
+++ b/tasks/config_samba.yml
@@ -36,10 +36,11 @@
     group: root
     mode: 0644
     backup: "{{ ctdb_backup_configs }}"
-  notify:
+  register: "samba_reconfigured"
+#  notify:
 #    - restart ctdb
-    - reload samba
-    
+#    - reload samba
+
 #- name: config_samba | creating samba link /etc/samba/smb.conf -> {{ ctdb_samba_config }}
 #  file:
 #    src: "{{ ctdb_samba_config }}"
@@ -58,3 +59,16 @@
     backup: "{{ ctdb_backup_configs }}"
   notify:
     - restart ctdb
+
+- name: config_samba | restarting ctdb (if samba reconfigured)  #we need to do this here before proceeding in order for Domain permissions and such to be assigned in later tasks.
+  service:
+    name: "ctdb"
+    state: restarted
+  register: "samba_ctdb_restarted"
+  when: samba_reconfigured.changed
+
+- name: config_samba | waiting for ctdb to restart
+  wait_for:
+    delay: 60  #we wait enough time for ctdb to startup samba services in order to continue
+    port: 445
+  when: samba_ctdb_restarted.changed
